--- a/config.ini
+++ b/config.ini
@@ -5,17 +5,15 @@ client_secret = client_secret
 
 [Directory]
 
-event_id = G298048
-mock_dir = mock_tests
-read_dir = superevents
+alert_type = preliminary
+event_id = S230728ak
 
 [Run]
 
 generate_targets = yes
-graph_targets = no
-parse_notice = no
 read_flatres_skymap = no
 read_multires_skymap = no
+read_notice = no
 retrieve_notice = no
 test_notice = no
 
@@ -26,4 +24,6 @@ num_remain = 50
 
 [Test]
 
+flatres_skymap = mock_tests/bayestar.fits.gz,0
+multires_skymap = mock_tests/bayestar.multiorder.fits
 test_type = earlywarning
